Use a more fluent approach for responses